objects/IFE_Part__c.object
<CustomObject>
    <fields>
        <fullName>IFE_Customer_Id__c</fullName>
        <label>IFE Customer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <label>Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IFE Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IFE_Customer_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IFE Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFE Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>